[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipu-ctrl-rdl"
version = "0.1.0"
description = "SystemRDL codegen for the IPU host-control register block"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "systemrdl-compiler>=1.27.0",
    "jinja2>=3.1.0",
    "peakrdl-html>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[project.scripts]
ipu-ctrl-codegen = "ipu_ctrl_rdl.codegen:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
ipu_ctrl_rdl = ["templates/*.j2"]

[tool.uv]
package = true
