load("@ipu_as_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python_pytest//python_pytest:defs.bzl", "py_pytest_test")
load("//:asm_rules.bzl", "assemble_asm")

package(default_visibility = ["//visibility:public"])

exports_files([
    "pyproject.toml",
])

py_library(
    name = "ipu_emu_lib",
    srcs = glob(["src/ipu_emu/*.py"]),
    imports = ["src"],
    deps = [
        "//src/tools/ipu-as-py:ipu_as_lib",
        "//src/tools/ipu-common:ipu_common_lib",
    ],
)

py_pytest_test(
    name = "test_xmem",
    srcs = ["test/test_xmem.py"],
    imports = ["src"],
    deps = [
        ":ipu_emu_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_regfile",
    srcs = ["test/test_regfile.py"],
    imports = ["src"],
    deps = [
        ":ipu_emu_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_execute",
    srcs = ["test/test_execute.py"],
    imports = ["src"],
    deps = [
        ":ipu_emu_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_debug_cli",
    srcs = ["test/test_debug_cli.py"],
    imports = ["src"],
    deps = [
        ":ipu_emu_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_emulator_e2e",
    srcs = ["test/test_emulator_e2e.py"],
    imports = ["src"],
    deps = [
        ":ipu_emu_lib",
        requirement("pytest"),
    ],
)
