[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipu-emu-py"
version = "0.1.0"
description = "IPU cycle-functional emulator in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "ml-dtypes>=0.2.0",
    "ipu-as-py",
    "ipu-common",
]

[tool.uv.sources]
ipu-as-py = { path = "../ipu-as-py", editable = true }
ipu-common = { path = "../ipu-common", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.uv]
package = true
