load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//:asm_rules.bzl", "assemble_asm")

cc_binary(
    name = "fully_connected_256x128",
    srcs = ["fully_connected_256x128.c"],
    deps = [
        "//:emulator",
        "//:ipu",
        "//:logger",
        "//:xmem",
    ],
)

assemble_asm(
    name = "assemble_fully_connected_256x128",
    src = "fully_connected_256x128.asm",
)

sh_test(
    name = "fully_connected_256x128_test",
    size = "medium",
    srcs = ["test_fully_connected_256x128.sh"],
    args = [
        "$(location :fully_connected_256x128)",
        "$(location :assemble_fully_connected_256x128.bin)",
        "$(location inputs_1x256_int8.bin)",
        "$(location weights_256x128_int8.bin)",
        "output_1x128_int32.bin",  # Just the filename, will be written to test outputs
    ],
    data = [
        "inputs_1x256_int8.bin",
        "output_1x128_int32.bin",
        "weights_256x128_int8.bin",
        "zeros_512_bytes.bin",
        ":assemble_fully_connected_256x128.bin",
        ":fully_connected_256x128",
    ],
)
